# haskcasting

./: .gitignore  README.md  cabal.project  fourmolu.yaml  haskcasting.cabal  scrape_patterns.py
example-spells/: spells.cabal
example-spells/src/: Ex1.hs  Ex2.hs
haskcasting/: LICENSE  haskcasting.cabal
haskcasting-deserializerA/: LICENSE  Main.hs  README.md  haskcasting-deserializerA.cabal
haskcasting-exprlang/: haskcasting-exprlang.cabal
haskcasting-exprlang-core/: haskcasting-exprlang-core.cabal
haskcasting-exprlang-core/src/Haskcasting/ExprLang/: Core.hs  TH.hs
haskcasting-exprlang/src/Haskcasting/: ExprLang.hs
haskcasting-exprlang/src/Haskcasting/ExprLang/: Hexcasting.hs  Infix.hs  Macros.hs  Ops.hs  TH.hs
haskcasting-exprlang/test/: Ops.hs  SampleProgs.hs
haskcasting-hexal/: haskcasting-hexal.cabal
haskcasting-hexal/src/Haskcasting/Iota/: Hexal.hs
haskcasting-hexal/src/Haskcasting/Patterns/: Hexal.hs
haskcasting-hexcassettes/: haskcasting-hexcassettes.cabal
haskcasting-hexcassettes/src/Haskcasting/Patterns/: Hexcassettes.hs
haskcasting-hexcasting/: haskcasting-hexcasting.cabal
haskcasting-hexcasting/src/Haskcasting/Compound/: Hexcasting.hs
haskcasting-hexcasting/src/Haskcasting/Patterns/: Hexcasting.hs
haskcasting-hexical/: haskcasting-hexical.cabal
haskcasting-hexical/src/Haskcasting/Iota/: Hexical.hs
haskcasting-hexical/src/Haskcasting/Patterns/: Hexical.hs
haskcasting-hexpose/: haskcasting-hexpose.cabal
haskcasting-hexpose/src/Haskcasting/Iota/: Hexpose.hs
haskcasting-hexpose/src/Haskcasting/Patterns/: Hexpose.hs
haskcasting-moreiotas/: haskcasting-moreiotas.cabal
haskcasting-moreiotas/src/Haskcasting/Iota/: Moreiotas.hs
haskcasting-moreiotas/src/Haskcasting/Patterns/: Moreiotas.hs
haskcasting/src/Haskcasting/: Embed.hs  Fragment.hs  Iota.hs  Pattern.hs  Serialize.hs  TH.hs  Util.hs
haskcasting/src/Haskcasting/Compound/: Hexcasting.hs
haskcasting/src/Haskcasting/Patterns/: Hexcasting.hs  TH.hs
haskcasting/src/Haskcasting/Serialize/: A.hs
src/: Test.hs
src/Haskcasting/: Fragment.hs  Iota.hs  TH.hs
src/Haskcasting/Patterns/: Hexcasting.hs  TH.hs
src/Haskcasting/Patterns/Hexcasting/: precomputed_numbers.txt
test-spells/: test-spells.cabal
test-spells/src/: Test.hs
