cabal-version:      2.4
name:               haskcasting
version:            0.0.0.0

synopsis:           Haskell DSL for Hexcasting
description:        Haskell DSL for Hexcasting

license:            MIT
license-file:       LICENSE
author:             hellobye65536
maintainer:         boshwang1234@gmail.com

common common
    hs-source-dirs:   src
    default-language: GHC2024
    build-depends:    base ^>= 4.20
    ghc-options:
        -Wall
        -ddump-to-file
        -ddump-splices

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:
        Haskcasting.Iota
        Haskcasting.Fragment
        Haskcasting.Patterns.TH
        Haskcasting.Patterns.Hexcasting
    build-depends:
        template-haskell,
        text,
        containers,
        HList,

executable test
    import:           common
    main-is:          Test.hs
    other-modules:
        Haskcasting.Iota
        Haskcasting.Fragment
        Haskcasting.Patterns.TH
        Haskcasting.Patterns.Hexcasting
    build-depends:
        haskcasting,
        template-haskell,
        text,
        containers,
        HList,
