cabal-version:      2.4
name:               haskcasting-exprlang-core
version:            0.1.0.0

synopsis:           Expression language for Haskcasting
description:        Expression language for Haskcasting

license:            MIT
license-file:       LICENSE
author:             hellobye65536
maintainer:         boshwang1234@gmail.com

common common
    default-language: GHC2024
    build-depends:    base ^>= 4.20
    ghc-options:
        -Wall

common build-depends
    build-depends:
        template-haskell,
        haskcasting,
        containers,
        HList,

library
    import:
        common,
        build-depends,
    hs-source-dirs:   src
    exposed-modules:
        Haskcasting.ExprLang.Core
        Haskcasting.ExprLang.TH
