cabal-version:      2.4
name:               haskcasting-exprlang
version:            0.1.0.0

synopsis:           Expression language for Haskcasting
description:        Expression language for Haskcasting

license:            MIT
license-file:       LICENSE
author:             hellobye65536
maintainer:         boshwang1234@gmail.com

common common
    default-language: GHC2024
    build-depends:    base ^>= 4.20
    ghc-options:
        -Wall

common build-depends
    build-depends:
        text,
        vector,
        containers,
        primitive,
        mtl,
        HList,
        ilist,
        template-haskell,
        haskcasting,
        haskcasting-exprlang-core,
        haskcasting-hexcasting,

library
    import:
        common,
        build-depends,
    hs-source-dirs:   src
    exposed-modules:
        Haskcasting.ExprLang
        Haskcasting.ExprLang.Ops
        Haskcasting.ExprLang.Macros

test-suite ops
    import:
        common,
        build-depends,
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Ops.hs
    build-depends:
        hspec,
        QuickCheck,
        haskcasting-exprlang,

test-suite sample-progs
    import:
        common,
        build-depends,
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          SampleProgs.hs
    build-depends:
        haskcasting-exprlang,
