cabal-version:      2.4
name:               haskcasting-hexcasting
version:            0.1.0.0

synopsis:           Hexcasting support library for Haskcasting
description:        Hexcasting support library for Haskcasting

license:            MIT
license-file:       LICENSE
author:             hellobye65536
maintainer:         boshwang1234@gmail.com

common common
    default-language: GHC2024
    build-depends:    base ^>= 4.20
    ghc-options:
        -Wall

common build-depends
    build-depends:
        haskcasting,
        haskcasting-exprlang-core,
        text,
        containers,
        file-embed,
        bytestring,
        HList,

library
    import:
        common,
        build-depends,
    hs-source-dirs:   src
    exposed-modules:
        Haskcasting.Patterns.Hexcasting
        Haskcasting.Compound.Hexcasting
