cabal-version:      2.4
name:               haskcasting
version:            0.1.0.0

synopsis:           Haskell DSL for Hexcasting
description:        Haskell DSL for Hexcasting

license:            MIT
license-file:       LICENSE
author:             hellobye65536
maintainer:         boshwang1234@gmail.com

common common
    hs-source-dirs:   src
    default-language: GHC2024
    build-depends:    base ^>= 4.20
    ghc-options:
        -Wall

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:
        Haskcasting.Pattern
        Haskcasting.Iota
        Haskcasting.Fragment
        Haskcasting.Embed
        Haskcasting.Serialize
        Haskcasting.Serialize.A
        Haskcasting.TH
        Haskcasting.Patterns.Hexcasting
        Haskcasting.Compound.Hexcasting
    build-depends:
        template-haskell,
        text,
        bytestring,
        containers,
        unordered-containers,
        file-embed,
        HList,
