cabal-version:      2.4
name:               test-spells
version:            0.0.0.0

-- synopsis:           Haskell DSL for Hexcasting
-- description:        Haskell DSL for Hexcasting

license:            MIT
license-file:       LICENSE
author:             hellobye65536
maintainer:         boshwang1234@gmail.com

common common
    hs-source-dirs:   src
    default-language: GHC2024
    build-depends:    base ^>= 4.20
    ghc-options:
        -Wall

executable test
    import:           common
    main-is:          Test.hs
    build-depends:
        haskcasting,
        text,
